@@ -1,5 +1,5 @@
 <div class="<?php print $classes; ?>">
 <?php if (!empty($invalid_asin)) { print "<div class='invalid_asin'>This item is no longer valid on Amazon.</div>"; } ?>
 <?php if (!empty($smallimage)) { print $smallimage; } ?>
-<div><strong><?php print l($title, $detailpageurl, array('html' => TRUE)); ?></strong></div>
+<div><strong><?php print l($title, $detailpageurl, array('html' => TRUE, 'attributes' => array('rel' => 'nofollow'))); ?></strong></div>
 </div>
